fixed bug as the funds where not aligned with risk categories, updated checkAnswer function to get index based on fund on screen and return its risk and check against user button selection

--- a/Assets/CSS/styles.css
+++ b/Assets/CSS/styles.css
@@ -248,16 +248,20 @@ Padding-top: 10px;
 }
 
 #fund-name-card{
-    height: 60px;
+    height: 70px;
     background-color: #b5ca83;
-    width:100px;
+    width:250px;
     margin-top:10px;
+    text-align: center;
+    padding-top:30px;
 }
 
 #fund-name-text{
     font-family: 'Open Sans', Arial, sans-serif;
-    color: #fff;
+    color: #000;
     font-size: 16px;
+    text-align: center;
+    
 }
 
 #score-area{
